Added page header.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Static layout starter</title>
+	<title>Domek w Juracie</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
@@ -12,17 +12,20 @@
 	<header class="page-header">
 		<div class="inner">
 			<h1 class="page-logo">
-				<a href="#welcome" title="Static layout starter">Static layout starter</a>
+				<a href="#welcome" title="Domek w Juracie">
+					<img src="assets/dist/images/logo-wjuracie-small.svg" alt="Domek w Juracie">
+				</a>
 			</h1>
 
 			<nav class="page-nav">
 				<ul>
-					<li><a href="#section-1">Menu Item 1</a></li>
-					<li><a href="#section-2">Menu Item 2</a></li>
-					<li><a href="#section-3">Menu Item 3</a></li>
-					<li><a href="#section-4">Menu Item 4</a></li>
+					<li><a href="#offer" data-scroll>Oferta</a></li>
+					<li><a href="#offer-details" data-scroll>O domku</a></li>
+					<li><a href="#gallery" data-scroll>Galeria</a></li>
+					<li><a href="#contact" data-scroll>Kontakt</a></li>
+					<li><a href="rules.html">Regulamin</a></li>
 				</ul>
-				<a href="#toggle" class="page-nav-toggle" title="Toggle navigation">
+				<a href="#toggle" class="page-nav-toggle" title="Pokaż/ukryj nawigację">
 					<span></span>
 				</a>
 			</nav>
