Added welcome section.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
 		</div>
 	</header>
 
-	<main class="inner">
-		<h2>Page content</h2>
+	<main>
+		<section class="welcome">
+			<p class="inner">
+				<img src="assets/src/images/logo-wjuracie.svg" alt="Domek w Juracie">
+			</p>
+		</section>
 	</main>
 
 	<script src="assets/dist/scripts/main.js"></script>
