Added offer section.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,64 @@
 				<img src="assets/src/images/logo-wjuracie.svg" alt="Domek w Juracie">
 			</p>
 		</section>
+
+		<div class="offer" id="offer">
+			<section class="offer-intro">
+				<div class="inner">
+					<div class="content">
+						<h2 class="section-header">Wakacje<br> nad<br> Bałtykiem</h2>
+						<div>
+							<p>
+								Oferujemy do Państwa dyspozycji w pełni wyposażony, drewniany, piętrowy domek letniskowy wybudowany w
+								czerwcu 2012 roku.
+							</p>
+							<p>
+								Domek znajduje się na samodzielnej, bardzo zielonej działce, usytuowanej na początku
+								rzędu kilkunastu podobnych działek.
+							</p>
+							<p>
+								Całość położona na skraju lasu, w bardzo cichej i spokojnej części
+								Juraty, z dala od ulicy. Od zatoki domek dzieli zaledwie kilkudziesięciometrowy lasek, a od nadmorskiej
+								plaży 15 minut spaceru.
+							</p>
+						</div>
+					</div>
+					<footer>
+						<a class="btn" href="#gallery" data-scroll>Zobacz galerię</a>
+					</footer>
+				</div>
+			</section>
+
+			<section class="offer-details offer-details-equipment" id="offer-details">
+				<div class="inner">
+					<div class="content">
+						<h2 class="section-header">Wyposażenie</h2>
+						<p>
+							2 x TV HD / lodówka i pralka automatyczna / płyta kuchenna gazowa (4 palniki) i czajnik elektryczny /
+							żelazko i deska do prasowania / odkurzacz / pościel i ręczniki łazienkowe /
+							sprzęt plażowy (2 leżaki, 2 parawany, parasol, duży ręcznik plażowy) /
+							trampolina do skakania dla dzieci / grill
+						</p>
+					</div>
+					<img src="assets/dist/images/items-wjuracie.jpg" alt="Taras i miejsce na grilla">
+				</div>
+			</section>
+
+			<section class="offer-details offer-details-rooms">
+				<div class="inner">
+					<img src="assets/dist/images/rooms-wjuracie.jpg" alt="Jadalnia i kącik wypoczynkowy">
+					<div class="content">
+						<h2 class="section-header">Pomieszczenia</h2>
+						<p>
+							salon z dużym telewizorem HD oraz telewizją "NC+" / aneks kuchenny z pełnym wyposażeniem /
+							łazienka z pralką automatyczną i prysznicem / sypialnia z łożem małżeńskim, telewizorem HD, szafą,
+							stolikiem oraz dwoma dużymi pufami / sypialnia z dwoma jednoosobowymi łóżkami i komodą /
+							zadaszony taras z bujanymi fotelami / pawilon ze stołem i krzesłami oraz murowanym grillem
+						</p>
+					</div>
+				</div>
+			</section>
+		</div>
 	</main>
 
 	<script src="assets/dist/scripts/main.js"></script>
