Added offer-more section.

--- a/index.html
+++ b/index.html
@@ -96,6 +96,16 @@
 				</div>
 			</section>
 		</div>
+
+		<section class="offer-more">
+			<div class="inner">
+				<h2 class="section-header">Zapraszamy</h2>
+				<p>Domek przeznaczony dla maksymalnie 5 osób.</p>
+				<p>Ceny wynajmu od 200 do 450 zł/dobę za cały obiekt.</p>
+				<p>Zapraszamy od maja do września.</p>
+				<p>Rezerwacja jest równoznaczna z akceptacją <a href="rules.html" title="Zapoznaj się z Regulaminem">Regulaminu</a>.</p>
+			</div>
+		</section>
 	</main>
 
 	<script src="assets/dist/scripts/main.js"></script>
