Added gallery section.

--- a/index.html
+++ b/index.html
@@ -106,6 +106,18 @@
 				<p>Rezerwacja jest równoznaczna z akceptacją <a href="rules.html" title="Zapoznaj się z Regulaminem">Regulaminu</a>.</p>
 			</div>
 		</section>
+
+		<section class="gallery" id="gallery">
+			<div class="inner">
+				<h2 class="section-header">Galeria</h2>
+				<ul class="thumbs">
+					<li><a href="#" class="patio" title="Zobacz więcej zdjęć"><img src="assets/dist/images/gallery-patio.jpg"></a></li>
+					<li><a href="#" class="bedroom" title="Zobacz więcej zdjęć"><img src="assets/dist/images/gallery-bedroom.jpg"></a></li>
+					<li><a href="#" class="front" title="Zobacz więcej zdjęć"><img src="assets/dist/images/gallery-front.jpg"></a></li>
+					<li><a href="#" class="lawn" title="Zobacz więcej zdjęć"><img src="assets/dist/images/gallery-lawn.jpg"></a></li>
+				</ul>
+			</div>
+		</section>
 	</main>
 
 	<script src="assets/dist/scripts/main.js"></script>
