Added contact section.

--- a/index.html
+++ b/index.html
@@ -118,6 +118,44 @@
 				</ul>
 			</div>
 		</section>
+
+		<section class="contact" id="contact">
+			<div id="map" class="map"></div>
+
+			<div class="inner">
+				<div class="contact-data">
+					<h2 class="section-header">Kontakt</h2>
+
+					<h3 class="fn">Krystyna Wróbel</h3>
+					<p>
+						<a class="tel" href="tel:0048513959213">+48 513 959 213</a><br>
+						<a class="email" href="mailto:domek@wjuracie.pl">domek@wjuracie.pl</a><br>
+						nr konta: 09 1140 2004 0000 3902 6649 3292
+					</p>
+
+					<form>
+						<fieldset>
+							<label for="name">imię i nazwisko</label>
+							<input class="control" type="text" name="name" id="name" required>
+						</fieldset>
+						<fieldset>
+							<label for="email">email</label>
+							<input class="control" type="email" id="email" name="email" required>
+						</fieldset>
+						<fieldset>
+							<label for="message">wiadomość</label>
+							<textarea class="control" id="message" name="message" rows="1" cols="30" required></textarea>
+						</fieldset>
+						<button type="submit" class="btn">Wyślij</button>
+					</form>
+
+					<footer>
+						Domek w Juracie &copy; 2016 Design & code
+						<a href="https://dribbble.com/lawniczak" target="_blank" title="Portfolio">Joanna Ławniczak</a>.
+					</footer>
+				</div>
+			</div>
+		</section>
 	</main>
 
 	<script src="assets/dist/scripts/main.js"></script>
