--- a/index.html
+++ b/index.html
@@ -159,5 +159,6 @@
 	</main>
 
 	<script src="assets/dist/scripts/main.js"></script>
+	<script src="//maps.googleapis.com/maps/api/js?key=AIzaSyAZLuYbR0z-Naz58zjT92kt59sCj3F5F8w&callback=mapInit"></script>
 </body>
 </html>
