Added smooth scroll.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<header class="page-header">
 		<div class="inner">
 			<h1 class="page-logo">
-				<a href="#welcome" title="Domek w Juracie">
+				<a href="#welcome" title="Domek w Juracie" data-scroll>
 					<img src="assets/dist/images/logo-wjuracie-small.svg" alt="Domek w Juracie">
 				</a>
 			</h1>
