Updated url for github.

--- a/rules.html
+++ b/rules.html
@@ -12,18 +12,18 @@
 <header class="page-header">
 	<div class="inner">
 		<h1 class="page-logo">
-			<a href="#welcome" title="Domek w Juracie">
+			<a href="/wjuracie/#welcome" title="Domek w Juracie">
 				<img src="assets/dist/images/logo-wjuracie-small.svg" alt="Domek w Juracie">
 			</a>
 		</h1>
 
 		<nav class="page-nav">
 			<ul>
-				<li><a href="/#offer">Oferta</a></li>
-				<li><a href="/#offer-details">O domku</a></li>
-				<li><a href="/#gallery">Galeria</a></li>
-				<li><a href="/#contact">Kontakt</a></li>
-				<li><a href="rules.html">Regulamin</a></li>
+				<li><a href="/wjuracie/#offer">Oferta</a></li>
+				<li><a href="/wjuracie/#offer-details">O domku</a></li>
+				<li><a href="/wjuracie/#gallery">Galeria</a></li>
+				<li><a href="/wjuracie/#contact">Kontakt</a></li>
+				<li><a href="/wjuracie/rules.html">Regulamin</a></li>
 			</ul>
 			<a href="#toggle" class="page-nav-toggle" title="Pokaż/ukryj nawigację">
 				<span></span>
