Blocked page for robots.

--- a/rules.html
+++ b/rules.html
@@ -5,6 +5,7 @@
 	<title>Regulamin | Domek w Juracie</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+	<meta name="robots" content="noindex, nofollow">
 
 	<link href="assets/dist/styles/app.css" rel="stylesheet">
 </head>
