--- a/rules.html
+++ b/rules.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
 	<link href="assets/dist/styles/app.css" rel="stylesheet">
+	<link href="assets/dist/images/favicon.png" rel="icon" type="image/png">
 </head>
 <body id="welcome">
 <header class="page-header">
