Fixed invalid url on rules page.

--- a/rules.html
+++ b/rules.html
@@ -45,7 +45,7 @@
                     <li>
                         Warunkiem dokonania rezerwacji jest kontakt <a href="mailto:domek@wjuracie.pl" title="Napisz do nas">mailowy</a> lub
                         <a href="tel:0048513959213">telefoniczny</a>, a następnie wpłata zadatku w wysokości
-                        30% łącznej ceny wynajmu, na numer konta podany na <a href="/#contact" title="Przejdź do strony kontaktu">stronie kontaktu.</a>
+                        30% łącznej ceny wynajmu, na numer konta podany na <a href="/wjuracie/#contact" title="Przejdź do strony kontaktu">stronie kontaktu.</a>
                     </li>
                     <li>
                         Opłata za zarezerwowany pobyt pomniejszona o wcześniej wpłacony zadatek uiszczona zostaje w dniu przyjazdu.
