--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<li><a href="#offer-details" data-scroll>O domku</a></li>
 					<li><a href="#gallery" data-scroll>Galeria</a></li>
 					<li><a href="#contact" data-scroll>Kontakt</a></li>
-					<li><a href="rules.html">Regulamin</a></li>
+					<li><a href="/wjuracie/rules.html">Regulamin</a></li>
 				</ul>
 				<a href="#toggle" class="page-nav-toggle" title="Pokaż/ukryj nawigację">
 					<span></span>
@@ -105,7 +105,7 @@
 				<p>Domek przeznaczony dla maksymalnie 5 osób.</p>
 				<p>Ceny wynajmu od 200 do 450 zł/dobę za cały obiekt.</p>
 				<p>Zapraszamy od maja do września.</p>
-				<p>Rezerwacja jest równoznaczna z akceptacją <a href="rules.html" title="Zapoznaj się z Regulaminem">Regulaminu</a>.</p>
+				<p>Rezerwacja jest równoznaczna z akceptacją <a href="/wjuracie/rules.html" title="Zapoznaj się z Regulaminem">Regulaminu</a>.</p>
 			</div>
 		</section>
 
